# dialogue_yoinker

./: .gitignore  CLAUDE.md  GALLIA_TRANSLATION_COMPLETE.md  PARSER_SUMMARY.txt  README.md  api_server.py  apply_bridges.py  batch_growth.py  batch_translate_gallia.py  brainrot_aesops.py  brainrot_aesops_v4.py  bridge_generation_data.json  bsa_parser.py  chain_linker.py  check_0037_data.py  compile_synthetic.py  complete_0037.py  cross_game.py  dialogue_graph.py  emotion_bridge.py  esm_dialogue_parser.py  extract_all_dlc.py  extract_dialogue.py  find_missing_ticket.py  fix_0037_proper.py  fix_and_save_0037.py  fk_normed_stories.py  force_submit_0037.py  gallia_translate_proper.py  gallia_translation_summary.md  gallia_translator.py  graph_diagnostics.py  graph_linker.py  growth_engine.py  inspect_all_translations.py  inspect_queue.py  landing_html.py  properly_complete_0037.py  prose_wrapper.py  pyproject.toml  (+11 more)
.claude/: settings.local.json
bibles/: cyrodiil.yaml  few_shot_translations.yaml  gallia.yaml  marmotte.yaml  mojave.yaml  morrowind.yaml  skyrim.yaml
configs/: btrm_full_7head.yaml  btrm_gemma3_270m.yaml  btrm_multihead.yaml  btrm_multihead_v2.yaml  btrm_multiturn_dialogue.yaml  btrm_skyrim.yaml  btrm_validation_api.yaml  btrm_validation_gemma.yaml  btrm_validation_qwen.yaml
data/: vocabulary_cache.json
notes/: 2025-12-22-growth-engine-milestone.md  2025-12-22-multi-backend-dispatch.md  2025-12-22-narrative-topology-reframe.md  2025-12-22-session-notes.md  2025-12-22-stats-guided-growth.md  2025-12-22-ticket-queue-run.md  2025-12-22-translation-reframe.md  2025-12-22-wet-claude-dry-run.md  2025-12-23-deepseek-portability-review.md  2025-12-23-graph-linking.md  2025-12-23-translation-orchestration.md  2025-12-24-brainrot-aesops-spec.md  2025-12-24-fk-normed-stories-spec.md  2025-12-24-prose-expansion-spec.md  2025-12-24-tinystories-barriers.md  2025-12-25-brainrot-aesops-spec.md  2025-12-25-consumer-pipeline-checkpoint.md  2025-12-25-fk-normed-stories-spec.md  2025-12-25-prose-expansion-spec.md  2025-12-25-tinystories-barriers.md  2025-12-26-brainrot-aesops-v4-reframe.md  2025-12-27-btrm-multihead-spec.md  (+4 more)
(+129 files in other folders)
